# hashbench

./: .editorconfig  .gitignore  BenchResults.ipynb  BenchResults.md  BenchResults.qmd  Cargo.toml  README.md  _quarto.yml  environment.yml
results/: Atom D2701.tsv  MBA M2.tsv  RK3568.tsv  RPi 4.tsv  atom-d2701.tsv  i7-1185G7 SL4.tsv  i9-9900.tsv  mba-m2.tsv
src/: bencher.rs  main.rs
