[package]
name = "hashbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
happylog = { version="^0.3.0-b3", features=["clap"] }
friendly = "^0.1"
clap = "^4.0"
anyhow = "^1.0"
rand = "^0.7"
pcg = "^4"
hex = "^0.4"
crypto-hashes = { version="^0.10", features=["include_weak"] }
